# cdk-sqs-lambda-dynamodb

./: .gitignore  LICENCE  README.md  cdk.json  pyproject.toml
cdk_sqs_lambda_dynamodb/: app.py
cdk_sqs_lambda_dynamodb/compute/sqs_to_dynamodb/: lambda_function.py
cdk_sqs_lambda_dynamodb/stacks/: __init__.py  demo_sqs_lambda_dynamodb.py  src_stack.py
tests/unit/: test_demo_sqs_lambda_dynamodb.py  test_src_stack.py
